<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">无声广场舞</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="titleText">首页</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="nomore">没有更多</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_circle">CircleActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_circle_talk">CircleTalkActivity</string>
    <string name="title_activity_circle_dynamic">CircleDynamicActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_start_menu">StartMenuActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_music_list">MusicListActivity</string>
    <string name="title_activity_play_music">PlayMusicActivity</string>
    <string name="title_activity_play_music_with_dance">PlayMusicWithDanceActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_insert_dynamic">InsertDynamicActivity</string>
    <string name="title_activity_web">WebVideoActivity</string>
    <string name="title_activity_video_link_item">VideoLinkItemActivity</string>
    <string name="title_activity_scan_result">ScanResultActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_user_update">UserUpdateActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_create_circle">CreateCircleActivity</string>
    <string name="title_activity_join_circle">JoinCircleActivity</string>
    <string name="title_activity_search_circle">SearchCircleActivity</string>
    <string name="title_activity_circle_detail">CircleDetailActivity</string>
    <string name="title_activity_live_service">LiveServiceActivity</string>
    <string name="title_activity_clock">ClockActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_clock_alert">ClockAlertActivity</string>
    <string name="title_activity_clock_edit">ClockEditActivity</string>
    <string name="listView">ListView</string>
    <string name="save">保存</string>
    <string name="timeSet">time set</string>
    <string name="dateText">datetime</string>
    <string name="search_hint">搜索记录</string>
    <string name="search_label">搜索</string>
    <string name="alertName">事件提醒</string>
    <string name="positiveButton">查看</string>
    <string name="negativeButton">忽略</string>
    <string name="title_activity_clock">ClockActivity</string>
    <string name="title_activity_clock_edit">ClockEditActivity</string>
    <string name="title_activity_clock_alert">ClockAlertActivity</string>
    <string name="title_activity_music_search">MusicSearchActivity</string>
    <string name="title_activity_music_detail">MusicDetailActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_insert_account">InsertAccountActivity</string>
    <string name="title_activity_select_account_type">SelectAccountTypeActivity</string>
    <string name="title_activity_music_list_with_dance">MusicListWithDanceActivity</string>
    <string name="title_activity_pedometer">PedometerActivity</string>
    <string name="title_activity_step_settings">StepSettingsActivity</string>
    <string name="notification_subtitle">计算你的步数</string>
    <string name="started">计步已开始。</string>
    <string name="stopped">计步已停止。</string>
    <string name="steps">步数</string>
    <string name="kilometers">公里</string>
    <string name="miles">米</string>
    <string name="steps_per_minute">步/分钟</string>
    <string name="kilometers_per_hour">Km/h</string>
    <string name="miles_per_hour">m/h</string>
    <string name="calories_burned">卡路里</string>
    <string name="centimeters">厘米</string>
    <string name="inches">英寸</string>
    <string name="kilograms">千克</string>
    <string name="pounds">磅</string>
    <string name="desired_pace">所需步数:</string>
    <string name="desired_speed">所需速度:</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="reset">重置</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>
    <string name="quit">Quit</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="title_activity_show_weight">ShowWeightActivity</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_emotion">EmotionActivity</string>
    <string name="title_activity_keep_body">KeepBodyActivity</string>
    <string name="title_activity_keep_face">KeepFaceActivity</string>
    <string name="title_activity_health_new">HealthNewActivity</string>
    <string name="title_activity_medical_care">MedicalCareActivity</string>
    <string name="title_activity_new_info">NewInfoActivity</string>
    <string name="title_activity_thin_body">ThinBodyActivity</string>
    <string name="title_activity_ease_baidu">EaseBaiduMapActivity</string>
    <string name="title_activity_ease_big_image">EaseShowBigImageActivity</string>
    <string name="title_em_fragment_groups">GroupsActivity</string>
    <string name="food">饮食</string>
    <string name="keepFace">保养</string>
    <string name="keepBody">养生</string>
    <string name="thinBody">瘦身</string>
    <string name="medicalCare">医护</string>
    <string name="emotion">情感</string>
    <string name="title_activity_my_circle_list_dialog">MyCircleListDialogActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>

</resources>