<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <include
        android:id="@+id/top_bar_include"
        layout="@layout/top_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="计步"
        android:textColor="#ffffff"
        android:textSize="22dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top_bar_include"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:id="@+id/row_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/row_spacing" >

            <LinearLayout
                android:id="@+id/box_steps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_long_grey"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingRight="@dimen/margin" >

                <TextView
                    android:id="@+id/step_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textColor="#101010"
                    android:textSize="@dimen/value" />

                <TextView
                    android:id="@+id/step_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/steps"
                    android:textColor="#505050"
                    android:textSize="@dimen/units" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box_distance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_long_grey"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/distance_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textColor="#101010"
                    android:textSize="@dimen/value" />

                <TextView
                    android:id="@+id/distance_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/kilometers"
                    android:textColor="#505050"
                    android:textSize="@dimen/units" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row_1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/row_spacing" >

            <LinearLayout
                android:id="@+id/box_pace"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_long_grey"
                android:orientation="vertical"
                android:paddingRight="@dimen/margin" >

                <TextView
                    android:id="@+id/pace_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textColor="#101010"
                    android:textSize="@dimen/small_value" />

                <TextView
                    android:id="@+id/pace_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/steps_per_minute"
                    android:textColor="#505050"
                    android:textSize="@dimen/units" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box_speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_long_grey"
                android:orientation="vertical"
                android:paddingRight="@dimen/margin" >

                <TextView
                    android:id="@+id/speed_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textColor="#101010"
                    android:textSize="@dimen/small_value" />

                <TextView
                    android:id="@+id/speed_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/kilometers_per_hour"
                    android:textColor="#505050"
                    android:textSize="@dimen/units" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box_calories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/btn_long_grey"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/calories_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/padding"
                    android:text=""
                    android:textColor="#101010"
                    android:textSize="@dimen/small_value" />

                <TextView
                    android:id="@+id/calories_units"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/calories_burned"
                    android:textColor="#505050"
                    android:textSize="@dimen/units" />
            </LinearLayout>
        </LinearLayout>

        <!-- Desired pace/speed row -->

        <LinearLayout
            android:id="@+id/desired_pace_control"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row_2"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_desired_pace_lower"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_long_white"
                android:text="-"
                android:textSize="@dimen/button_sign" />

            <LinearLayout
                android:layout_width="@dimen/desired_pace_width"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/btn_long_grey"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/desired_pace_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/desired_pace"
                    android:textColor="#505050" />

                <TextView
                    android:id="@+id/desired_pace_value"
                    android:layout_width="@dimen/desired_pace_width"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#101010"
                    android:textSize="@dimen/desired_pace" />
            </LinearLayout>

            <Button
                android:id="@+id/button_desired_pace_raise"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_long_white"
                android:text="+"
                android:textSize="@dimen/button_sign" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>